--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     color:whitesmoke;
     background-color: #f5f5dc;
     background: rgb(131,58,180);
-    background: linear-gradient(176deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
 }
 
 .avatar{
